<resources>
    <string name="app_name">My App</string>
    <string name="insira_o_usuario">Insira o usuário</string>
    <string name="insira_a_senha">Insira a senha</string>


    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="signUp"><![CDATA[>]]></string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signIn"><![CDATA[>]]></string>

</resources>