<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/azul"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="165dp"
            android:src="@drawable/ic_baseline_arrow_drop_down_circle_24"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="60dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/borda"
            android:drawableRight="@drawable/ic_baseline_person_24" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="60dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/borda"
            android:drawableRight="@drawable/ic_baseline_vpn_key_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="60dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/borda"

            android:drawableRight="@drawable/ic_baseline_local_post_office_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="60dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/borda"

            android:drawableRight="@drawable/ic_baseline_phone_android_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_baseline_crop_square_24"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                />




            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Allow Term e Conditions "
                android:textColor="#FFFEFC"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:textAllCaps="true"
                />


        </LinearLayout>

        <Button
            android:id="@+id/btnSair"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/botao_redondo"

            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#F8F6F6"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="50dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="#FFFFFD"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="40dp"
            />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">


          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Sign In"
              android:textColor="#FFFFFD"
              android:layout_marginLeft="200dp"
              android:textAllCaps="false"
              android:textSize="20dp"
              android:layout_marginTop="5dp"
              />


      </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/ic_baseline_arrow_forward_ios_24"
            android:textColor="#FDFDFD"
            android:background="@drawable/borda"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="-30dp"
            android:paddingBottom="15dp"
            />




    </LinearLayout>

    </LinearLayout>